# smart_list

./: .gitignore  README.md  pyproject.toml  setup.py  smart_list.py  test.py  test_virtual.py
smart_list/: __init__.py  iat_patch.py  smart_list.py  unified_list.py
