[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart_list"
version = "1.2.9"
authors = [
    {name = "Christopher Toth", email = "q@q-continuum.net"},
]
description = "Smart list view"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "frozendict",
    "resource_finder @ git+https://github.com/accessibleapps/resource_finder.git",
    "pywin32; sys_platform == 'win32'",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["smart_list"]

[tool.hatch.build.targets.wheel.sources]
"smart_list" = "smart_list"

[tool.hatch.build.wheel.shared-data]
"smart_list/iat_hook32.dll" = "smart_list/iat_hook32.dll"
"smart_list/iat_hook64.dll" = "smart_list/iat_hook64.dll"
